# haechi_ws

./: README.md
haechi_commander/: package.xml  setup.cfg  setup.py
haechi_commander/agv_commander/: commander_node.py  goal_pose_subscriber.py
haechi_commander/haechi_commander/: vehicle_navigation.py
haechi_description/: package.xml  setup.cfg  setup.py
haechi_description/launch/: display.launch.py  goal_pose.py
haechi_description/urdf/: haechi_robot.urdf
web_site/: haechi.py  map_grid.py
web_site/templates/: index.html
yolov8_person_detect/: package.xml  setup.cfg  setup.py
yolov8_person_detect/launch/: yolo_launch.py
yolov8_person_detect/yolov8_person_detect/: yolo_node.py
